feat: implement JWT authentication
- Add login mutation with JWT token generation
- Implement authentication middleware
- Add protected 'me' query
- Configure GraphQL context with user
- Add auth service with token validation
- Update types and interfaces for auth

Testing Guide:
1. Create User:
mutation {
  createUser(
    name: "Test User"
    email: "test@example.com"
    password: "123456"
  ) {
    id
    name
    email
    role
  }
}

2. Login and Get Token:
mutation {
  login(
    email: "test@example.com"
    password: "123456"
  ) {
    token
    user {
      id
      name
      email
      role
    }
  }
}

3. Access Protected Route:
# Add to Headers:
{
  "Authorization": "Bearer <token_from_login>"
}

query {
  me {
    id
    name
    email
    role
  }
}

Test Cases:
- Login with wrong credentials should fail
- Me query without token should fail
- Me query with invalid token should fail
- Me query with valid token should return user data

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -25,6 +25,8 @@ services:
     volumes:
       - ./src:/usr/src/app/src
       - ./prisma:/usr/src/app/prisma
+      - ./package.json:/usr/src/app/package.json
+      - ./tsconfig.json:/usr/src/app/tsconfig.json      
     depends_on:
       - postgres
 
