--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "@apollo/server": "^4.11.3",
     "@prisma/client": "^5.10.2",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "4.18.2",
     "graphql": "^16.10.0",
     "graphql-tag": "^2.12.6",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^18.17.19",
